Fixed some layout issues in admin console.
- Fixed content layout in admin console when in small viewport.
- Fixed header in admin console.

--- a/WebApp/WebApp/wwwroot/css/style.css
+++ b/WebApp/WebApp/wwwroot/css/style.css
@@ -332,7 +332,7 @@ header {
   top: 0;
   width: 100%;
   height: 80px;
-  z-index: 1;
+  z-index: 2;
   background-color: #FFFFFF;
   display: flex;
   padding: 0 20px;
@@ -834,10 +834,10 @@ footer .container {
   z-index: 1;
 }
 #admin-root #content {
-  width: 100%;
-  margin-left: 22px;
+  margin-left: 250px;
   margin-bottom: 22px;
   align-content: center;
+  width: 100%;
 }
 #admin-root #content > * {
   margin-left: auto;
@@ -845,4 +845,15 @@ footer .container {
 }
 #admin-root ul {
   margin-bottom: 0;
+}
+#admin-root .logo {
+  grid-area: logo;
+  display: flex;
+  align-items: center;
+  font-size: 27px;
+  font-weight: 700;
+  color: #202020;
+}
+#admin-root .logo img {
+  margin-right: 5px;
 }
