--- a/WebApp/WebApp/wwwroot/scss/admin/_admin.scss
+++ b/WebApp/WebApp/wwwroot/scss/admin/_admin.scss
@@ -8,23 +8,35 @@
         bottom: 0;
         left: 0;
         z-index: 1;
+
     }
 
     #content {
-        width: 100%;
-        margin-left: 22px;
+        margin-left: 250px;
         margin-bottom: 22px;
         align-content: center;
+        width: 100%;
 
         > * {
             margin-left: auto;
             margin-right: auto;
         }
-
     }
 
     ul {
         margin-bottom: 0;
     }
 
+    .logo {
+        grid-area: logo;
+        display: flex;
+        align-items: center;
+        font-size: 27px;
+        font-weight: $font-weight-bold;
+        color: $color-dark-1;
+
+        img {
+            margin-right: 5px;
+        }
+    }
 }
