--- a/WebApp/WebApp/wwwroot/scss/components/_header.scss
+++ b/WebApp/WebApp/wwwroot/scss/components/_header.scss
@@ -7,7 +7,7 @@ header {
     top: 0;
     width: 100%;
     height: 80px;
-    z-index: 1;
+    z-index: 2;
     background-color: $color-white;
     display: flex;
     padding: 0 20px;
